components/common/CustomCard.module.scss
.card {
  width: 420px;
  max-width: 100%;
  background-color: white;
  display: flex;
  flex-direction: column;
  padding: 1.5rem;
  border: 1px solid var(--border-default-grey);
  border-radius: 0.25rem;
}

.title {
  color: #161616;
  font-size: 1.5rem;
  margin: 0;
}

.subtitle {
  color: #666666;
  font-size: 1rem;
  margin: 0;
}

.description {
  color: #3a3a3a;
  font-size: 1rem;
  margin-top: 1rem;
}

.header {
  display: flex;
  flex-direction: column-reverse; /* mobile: logo on top, text below */
  align-items: flex-start;
}

.infos {
  font-size: 0.875rem;
  color: "#666666";
  display: flex;
  flex-direction: row;
  column-gap: 0.5rem;
}

.footer {
  display: flex;
  flex-direction: column;
  row-gap: 1.25rem;
}

.button {
  margin-left: auto;
}

/* --- desktop --- */
@media (min-width: 768px) {
  .header {
    flex-direction: row;
    justify-content: space-between;
  }

  .card {
    width: 588px;
    padding: 2.25rem 3rem 2rem 3rem;
    max-width: 100%;
  }

  .footer {
    flex-direction: row;
    align-items: center;
  }
}

.badges {
  display: flex;
  flex-direction: row;
  column-gap: 1rem;
  margin-bottom: 0.25rem;
}

